--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,10 +33,15 @@ website:
     foreground: "#ffffff"
     left: >
       Created by Fernanda Aguirre
-    right: 
+    center:
       - icon: github
         href: https://github.com/fer-aguirre
       - icon: twitter 
         href: https://twitter.com/feragru
+      - icon: linkedin
+        href: https://www.linkedin.com/in/feragru/
       - icon: envelope
         href: mailto:feraguirre@riseup.net
+    right: >
+        [Powered by Quarto](https://github.com/fer-aguirre/oportunidades-perioidstas-latam)
+
